Add account bar

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,8 @@
     <!-- endbuild -->
 
     <script src="scripts/hoodie.angularjs.js"></script>
+    <script src="scripts/hoodie.accountbar.bootstrap.js"></script>
+    <script src="scripts/bootstrap.modalform.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
