--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
     <script src="scripts/hoodie.accountbar.bootstrap.js"></script>
     <script src="scripts/bootstrap.modalform.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/directives/isDraggable.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
