--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
     <script src="scripts/hoodie.js"></script>
     <script src="scripts/raphael.js"></script>
     <script src="scripts/hoodie.accountbar.bootstrap.js"></script>
-    <!--<script src="scripts/bootstrap.modalform.js"></script>-->
+    <script src="scripts/bootstrap.modalform.js"></script>
     <script src="scripts/main.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
