--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>GENius</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -91,10 +91,10 @@
     <!-- endbuild -->
 
     <script src="bower_components/jsPlumb/dist/js/jquery.jsPlumb-1.6.1-min.js"></script>
-    <script src="scripts/hoodie.js"></script>
-    <script src="scripts/raphael.js"></script>
-    <script src="scripts/hoodie.accountbar.bootstrap.js"></script>
-    <script src="scripts/bootstrap.modalform.js"></script>
+    <script src="scripts/vendor/hoodie.js"></script>
+    <script src="scripts/vendor/raphael.js"></script>
+    <script src="scripts/vendor/hoodie.accountbar.bootstrap.js"></script>
+    <script src="scripts/vendor/bootstrap.modalform.js"></script>
     <script src="scripts/main.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
