--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-underscore-module/angular-underscore-module.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -106,5 +107,6 @@
     <script src="scripts/directives/isDraggable.js"></script>
     <script src="scripts/directives/circuitSettings.js"></script>
     <script src="scripts/directives/isDroppable.js"></script>
+    <script src="scripts/models/block.js"></script>
 </body>
 </html>
