Fix directive compilation deleteBrick

--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
     <script src="scripts/directives/isDraggable.js"></script>
     <script src="scripts/directives/circuitSettings.js"></script>
     <script src="scripts/directives/isDroppable.js"></script>
+    <script src="scripts/directives/deleteBrick.js"></script>
     <script src="scripts/models/block.js"></script>
 </body>
 </html>
