Refactor droppable logic into separate service

--- a/app/index.html
+++ b/app/index.html
@@ -106,5 +106,6 @@
     <script src="scripts/directives/isDroppable.js"></script>
     <script src="scripts/directives/deleteBrick.js"></script>
     <script src="scripts/models/block.js"></script>
+    <script src="scripts/services/dropService.js"></script>
 </body>
 </html>
