--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container-fluid" ng-controller="MainCtrl" ng-view=""></div>
+    <div class="container-fluid" ng-controller="MainCtrl" ng-view></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -79,6 +79,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/bricks.js"></script>
     <!-- endbuild -->
 
     <script src="scripts/directives/isDraggable.js"></script>
