--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="scripts/directives/circuitSettings.js"></script>
     <script src="scripts/directives/isDroppable.js"></script>
     <script src="scripts/directives/deleteBrick.js"></script>
+    <script src="scripts/directives/brickPopover.js"></script>
     <script src="scripts/models/brick.js"></script>
     <script src="scripts/services/dropService.js"></script>
 </body>
