--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,8 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+
+    <script src="scripts/controllers/baseController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/controllers/bricksController.js"></script>
     <!-- endbuild -->
@@ -86,7 +88,10 @@
     <script src="scripts/directives/isDroppableDirective.js"></script>
     <script src="scripts/directives/deleteBrickDirective.js"></script>
     <script src="scripts/directives/brickPopoverDirective.js"></script>
+
+    <script src="scripts/models/base.js"></script>
     <script src="scripts/models/brick.js"></script>
+
     <script src="scripts/services/dropService.js"></script>
 </body>
 </html>
