--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
 
     <script src="scripts/directives/isDraggableDirective.js"></script>
     <script src="scripts/directives/circuitSettingsDirective.js"></script>
+    <script src="scripts/directives/circuitEventsDirective.js"></script>
     <script src="scripts/directives/isDroppableDirective.js"></script>
     <script src="scripts/directives/deleteBrickDirective.js"></script>
     <script src="scripts/directives/brickPopoverDirective.js"></script>
