Add update brick directive to handle brick popover submission

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
     <script src="scripts/directives/isDroppableDirective.js"></script>
     <script src="scripts/directives/deleteBrickDirective.js"></script>
     <script src="scripts/directives/brickPopoverDirective.js"></script>
+    <script src="scripts/directives/updateBrickDirective.js"></script>
     <script src="scripts/directives/connectionPopoverDirective.js"></script>
 
     <script src="scripts/models/base.js"></script>
