Implement basic simulation of ODEs

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
     <script src="scripts/vendor/hoodie.accountbar.bootstrap.js"></script>
     <script src="scripts/vendor/bootstrap.modalform.js"></script>
     <script src="scripts/vendor/angular-underscore-module.js"></script>
+    <script src="scripts/vendor/numeric-1.2.6.min.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -95,5 +96,6 @@
     <script src="scripts/models/brick.js"></script>
 
     <script src="scripts/services/dropService.js"></script>
+    <script src="scripts/services/simulationService.js"></script>
 </body>
 </html>
