--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
