--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,8 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
 
+    <script src="scripts/filters/fuzzyFilter.js"></script>
+
     <script src="scripts/controllers/baseController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/controllers/bricksController.js"></script>
