Move brickForm data to popoverTypesService

--- a/app/index.html
+++ b/app/index.html
@@ -96,5 +96,6 @@
     <script src="scripts/models/brick.js"></script>
 
     <script src="scripts/services/dropService.js"></script>
+    <script src="scripts/services/popoverTypesService.js"></script>
 </body>
 </html>
