--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
+    <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -76,6 +76,7 @@
     <script src="scripts/vendor/bootstrap.modalform.js"></script>
     <script src="scripts/vendor/angular-underscore-module.js"></script>
     <script src="scripts/vendor/numeric-1.2.6.min.js"></script>
+    <script src="scripts/vendor/highstock.src.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
