Add possibility to import csv and create Gene model

--- a/app/index.html
+++ b/app/index.html
@@ -96,8 +96,11 @@
 
     <script src="scripts/models/base.js"></script>
     <script src="scripts/models/brick.js"></script>
+    <script src="scripts/models/gene.js"></script>
 
     <script src="scripts/services/dropService.js"></script>
     <script src="scripts/services/popoverTypesService.js"></script>
+    <script src="scripts/services/CSVToArrayService.js"></script>
+    <script src="scripts/services/importCSVService.js"></script>
 </body>
 </html>
