Add getters for csv files

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,8 @@
     <script src="scripts/models/base.js"></script>
     <script src="scripts/models/brick.js"></script>
     <script src="scripts/models/gene.js"></script>
+    <script src="scripts/models/andPromoter.js"></script>
+    <script src="scripts/models/notPromoter.js"></script>
 
     <script src="scripts/services/dropService.js"></script>
     <script src="scripts/services/popoverTypesService.js"></script>
