--- a/app/index.html
+++ b/app/index.html
@@ -74,11 +74,10 @@
     <script src="scripts/vendor/hoodie.accountbar.bootstrap.js"></script>
     <script src="scripts/vendor/bootstrap.modalform.js"></script>
     <script src="scripts/vendor/angular-underscore-module.js"></script>
+    <script src="scripts/vendor/js-model.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-
-    <script src="scripts/filters/fuzzyFilter.js"></script>
 
     <script src="scripts/controllers/baseController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
