Adding ActiveRecord like model logic

--- a/app/index.html
+++ b/app/index.html
@@ -74,10 +74,14 @@
     <script src="scripts/vendor/hoodie.accountbar.bootstrap.js"></script>
     <script src="scripts/vendor/bootstrap.modalform.js"></script>
     <script src="scripts/vendor/angular-underscore-module.js"></script>
-    <script src="scripts/vendor/js-model.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/models/active_record/base.js"></script>
+    <script src="scripts/models/active_record/callbacks.js"></script>
+    <script src="scripts/models/active_record/errors.js"></script>
+    <script src="scripts/models/active_record/classMethods.js"></script>
+    <script src="scripts/models/active_record/instanceMethods.js"></script>
 
     <script src="scripts/controllers/baseController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
@@ -93,7 +97,6 @@
     <script src="scripts/directives/updateBrickDirective.js"></script>
     <script src="scripts/directives/connectionPopoverDirective.js"></script>
 
-    <script src="scripts/models/base.js"></script>
     <script src="scripts/models/brick.js"></script>
 
     <script src="scripts/services/dropService.js"></script>
