Adding a lot of ActiveRecord style model logic

--- a/app/index.html
+++ b/app/index.html
@@ -80,11 +80,11 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/models/active_record/base.js"></script>
     <script src="scripts/models/active_record/callbacks.js"></script>
-    <script src="scripts/models/active_record/errors.js"></script>
-    <script src="scripts/models/active_record/classMethods.js"></script>
-    <script src="scripts/models/active_record/instanceMethods.js"></script>
+    <script src="scripts/models/active_record/collections.js"></script>
+    <script src="scripts/models/active_record/attributes.js"></script>
+    <script src="scripts/models/active_record/associations.js"></script>
+    <script src="scripts/models/active_record/base.js"></script>
 
     <script src="scripts/controllers/baseController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
@@ -101,6 +101,8 @@
     <script src="scripts/directives/connectionPopoverDirective.js"></script>
 
     <script src="scripts/models/brick.js"></script>
+    <script src="scripts/models/position.js"></script>
+    <script src="scripts/models/connection.js"></script>
     <script src="scripts/models/gene.js"></script>
     <script src="scripts/models/andPromoter.js"></script>
     <script src="scripts/models/notPromoter.js"></script>
