--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/vendor/angular-underscore-module.js"></script>
     <script src="scripts/vendor/numeric-1.2.6.min.js"></script>
     <script src="scripts/vendor/highstock.src.js"></script>
+    <script src="scripts/vendor/FileSaver.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
