--- a/app/index.html
+++ b/app/index.html
@@ -107,5 +107,6 @@
     <script src="scripts/services/popoverTypesService.js"></script>
     <script src="scripts/services/CSVToArrayService.js"></script>
     <script src="scripts/services/importCSVService.js"></script>
+    <script src="scripts/services/connectionService.js"></script>
 </body>
 </html>
