--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+    <script src="bower_components/js-priority-queue/priority-queue.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -77,7 +78,7 @@
     <script src="scripts/vendor/angular-underscore-module.js"></script>
     <script src="scripts/vendor/numeric-1.2.6.min.js"></script>
     <script src="scripts/vendor/highstock.src.js"></script>
-    <script src="scripts/vendor/priority-queue.no-require.min.js"></script>
+    <script src="scripts/vendor/priority-queue.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
