--- a/app/index.html
+++ b/app/index.html
@@ -119,5 +119,6 @@
     <script src="scripts/services/CSVToArrayService.js"></script>
     <script src="scripts/services/importCSVService.js"></script>
     <script src="scripts/services/connectionService.js"></script>
+    <script src="scripts/services/exportService.js"></script>
 </body>
 </html>
