--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,8 @@
     <script src="scripts/controllers/bricksController.js"></script>
     <!-- endbuild -->
 
+    <script src="scripts/filters/attributesFilter.js"></script>
+
     <script src="scripts/directives/isDraggableDirective.js"></script>
     <script src="scripts/directives/circuitSettingsDirective.js"></script>
     <script src="scripts/directives/circuitEventsDirective.js"></script>
